###############################################################################
# DEPENDENCIES
###############################################################################

set(GLAD_DIR "${PROJECT_SOURCE_DIR}/deps/glad_gl_core_33")


###############################################################################
# SOURCE FILES
###############################################################################

# add_executable(${PROJECT_NAME}
#                ${PROJECT_SOURCE_DIR}/src/main.cpp)
# target_include_directories(${PROJECT_NAME} PRIVATE
#                            ${PROJECT_SOURCE_DIR}/include
#                            ${GLAD_DIR}/include)
# target_link_libraries(${PROJECT_NAME}
#                       glad
#                       glfw)
